# brewcli

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.html  README.md  brewery.py  cli.py  pyproject.toml  requirements.txt  tree.txt
README_files/libs/bootstrap/: bootstrap-973236bd072d72a04ee9cd82dcc9cb29.min.css
brewcli/: brewery.py  cli.py  models.py  utils.py
src/brewcli/: brewery.py  cli.py  logging.py  models.py  render.py  utils.py
test/: test_cli.py  test_commands.py  test_dataclasses.py  test_models.py  test_requests.py
tests/: conftest.py  test_brewery_api.py  test_cli.py  test_models.py  test_render.py
turqcli/: cli.py  models.py
