[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brewcli"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Tyler Nardone", email = "tynardone@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []

[tool.ruff.lint]
extend-select = ["E501"]


[tool.pylint."messages control"]
disable = ["R0902", "R0903", "C0115", "C0114", "E1101"]
