[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brewcli"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Tyler Nardone", email = "tynardone@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "N",   # pep8 naming
    "PL",  # pylint
    "RUF", # ruff specific
    "PD",  # pandas-vet
]
ignore = ["PLR2004"]
