[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brewcli"]

[project]
name = "brewcli"
version = "0.2.0"
description = "A command-line interface for exploring breweries via the Open Brewery DB API."
readme = "README.md"
authors = [{ name = "Tyler Nardone", email = "tynardone@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["brewery", "cli", "openbrewerydb", "beer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Breweries",
]
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/tynardone/brewcli"
Repository = "https://github.com/tynardone/brewcli"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.10",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.2",
]

[project.scripts]
brewcli = "brewcli.cli:cli"


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "N",   # pep8 naming
    "PL",  # pylint
    "RUF", # ruff specific
    "PD",  # pandas-vet
]
ignore = ["PLR2004"]
